k8s/keyclock-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata: 
  name: qgw
spec: 
  gateways: 
    - dgw-gateway
  hosts: 
    - "*"
  http: 
    - 
      route:
        -
          destination:
            host: filterid
            port:
              number: 5559
      corsPolicy:
        allowOrigin:
        - "*"
        allowMethods:
        - POST
        - GET
        - PUT
        - OPTIONS
        - HEAD
        allowCredentials: true
        allowHeaders:
        - origin
        - x-requested-with 
        - content-type 
        - accept 
        - authorization
        maxAge: 600s
